fix profile feeds on safari and mozilla

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -89,11 +89,6 @@
 .mini-feed {
   margin-top: 50px;
   width: 35%;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  align-items: center;
 }
 
 .mini-feed > .story-square-2 {
